Tweak toml config, and let's call this version 1.0.0.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "soroban-chonk"
-version = "0.1.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
+version = "1.0.0"
+edition = "2024"
+license = "Apache-2.0"
 description = "Chunked content storage for Soroban smart contracts"
 repository = "https://github.com/wyhaines/soroban-chonk"
 readme = "README.md"
